# altea

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: fibsem_default.yaml  fibsem_learned.yaml
docs/: acquisition.md  architecture.md  citing.md  conf.py  configuration.md  contributing.md  index.md  installation.md  morphometry.md  pipeline.md  provenance.md  quickstart.md  segmentation.md
docs/api/: acquire.rst  align.rst  core.rst  datasets.rst  index.rst  io.rst  morphometry.rst  pipeline.rst  preprocess.rst  provenance.rst  qc.rst  segment.rst  viz.rst
examples/: run_synthetic.py
src/altea/: __init__.py  cli.py  core.py  provenance.py
src/altea/acquire/: __init__.py  convergence.py
src/altea/align/: __init__.py  registration.py
src/altea/datasets/: __init__.py  synthetic.py
src/altea/io/: __init__.py  loaders.py
src/altea/morphometry/: __init__.py  descriptors.py
src/altea/pipeline/: __init__.py  orchestrator.py
src/altea/preprocess/: __init__.py  filters.py
src/altea/qc/: __init__.py  metrics.py
src/altea/segment/: __init__.py  base.py
src/altea/segment/classical/: __init__.py  threshold.py
src/altea/segment/learned/: __init__.py  pixel_rf.py  unet.py
src/altea/viz/: __init__.py  figures.py
tests/: test_pipeline.py
