[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altea"
version = "0.1.0"
description = "Autonomous Learning for Tomographic Ensembles and Attributes: a reproducible pipeline for quality control, segmentation and 3D morphometry of tomographic image stacks."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Jorge Bravo-Abad" }]
keywords = [
    "tomography", "FIB-SEM", "image-segmentation", "morphometry",
    "porous-media", "reproducibility", "materials-characterization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-image>=0.20",
    "scikit-learn>=1.1",
    "tifffile>=2022.8.12",
    "pyyaml>=6.0",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
deep = ["torch>=2.0"]          # optional deep-learning segmentation backends
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
altea = "altea.cli:main"

[project.urls]
Homepage = "https://github.com/jorgebravoabad/altea"
Repository = "https://github.com/jorgebravoabad/altea"
Documentation = "https://github.com/jorgebravoabad/altea#readme"
Issues = "https://github.com/jorgebravoabad/altea/issues"
Zenodo = "https://doi.org/10.5281/zenodo.21442516"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
